--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -542,7 +542,7 @@ header {
 .nav-user {
     display: flex;
     height: 56px;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-content: center;
 }
 
