--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -14,5 +14,8 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
+<script charset="utf-8">
+  window.InitialData = { user:<%- JSON.stringify(user) %>}
+</script>
 </body>
 </html>
