Add user to navbar and side drawer
Signed-off-by: Anshuman <achhap.10.01@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -538,7 +538,7 @@ header {
 .nav-user {
     display: flex;
     height: 56px;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-content: center;
 }
 
