Add redirect for login
Signed-off-by: Anshuman <achhap.10.01@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -2919,6 +2919,10 @@ button {
 }
 
 .dev-head {
+    font-size: 20px;
+}
+
+.dev-tag {
     position: relative;
     background-color: blue;
     padding: 3px;
