Integrate single blog page
Signed-off-by: Anshuman <achhap.10.01@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -1675,7 +1675,7 @@ header {
 .head-details {
     padding-top: 10px;
     font-size: 36px;
-    color: rgba(0,0,0,.54);
+    color: rgba(0, 0, 0, .54);
 }
 
 .head-details-alt {
