--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -3290,7 +3290,7 @@ header {
 .search-card {
     position: relative;
     margin: .5em 0;
-    width: fit-content;
+    width: 100%;
     height: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1em 1em;
