Add links to search
Signed-off-by: Anshuman <achhap.10.01@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -63,6 +63,14 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
 textarea {
     resize: none;
 }
