--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -1529,11 +1529,11 @@ header {
 }
 
 .single-blog {
-    padding: 20px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
 }
 
 .single-blog .single-blog-heading {
-    margin: 1em 0 2em 0;
+    margin: 0 0 2em 0;
 }
 
 .single-blog .single-blog-cover-image {
