--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -77,7 +77,7 @@ textarea {
 
 /* markdown */
 
-.markdown  {
+.markdown {
     font-family: var(--secondary-font);
     word-wrap: break-word;
 }
@@ -150,7 +150,7 @@ textarea {
     background: #f6f8fa;
     overflow-x: scroll;
     color: black;
-    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
     font-size: 1em;
 }
 
@@ -165,11 +165,11 @@ textarea {
 .markdown code {
     padding: .2em .4em;
     margin: 0;
-    background-color: rgba(27,31,35,.05);
+    background-color: rgba(27, 31, 35, .05);
     border-radius: 3px;
 }
 
-.markdown pre>code {
+.markdown pre > code {
     padding: 0;
     margin: 0;
     font-size: 100%;
@@ -177,7 +177,7 @@ textarea {
     white-space: pre;
     background: transparent;
     border: 0;
-  }
+}
 
 
 /*login.jsx*/
@@ -1558,6 +1558,22 @@ header {
     cursor: pointer;
 }
 
+.single-blog-secondary-heading {
+    height: 40px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.single-blog-secondary-heading-names {
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4px;
+}
+
 .single-blog .single-blog-content {
     padding-top: 2px;
     margin: 1em 0 2em 0;
@@ -1600,7 +1616,7 @@ header {
     .blog-svg img {
         width: 60%;
     }
-    
+
 }
 
 @media (max-width: 768px) {
@@ -3452,6 +3468,7 @@ header {
     .bio p {
         font-size: 12px;
     }
+
     .blog-container {
         width: 100%;
     }
