styling: Make anchor tags better looking
Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -27,6 +27,10 @@ body {
     background: var(--sec-color);
 }
 
+a {
+    color: #5CAA9C;
+}
+
 ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
