treewide: Add save snackbars
Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -183,6 +183,22 @@ textarea {
     border: 0;
 }
 
+.markdown blockquote {
+    margin-top: 4px;
+    margin-bottom: 12px;
+    padding: 0 1em;
+    color: #6a737d;
+    border-left: .25em solid #dfe2e5;
+}
+
+.markdown-body blockquote>:first-child {
+    margin-top: 0;
+}
+
+.markdown-body blockquote>:last-child {
+    margin-bottom: 0;
+}
+
 
 /*login.jsx*/
 
