--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -3604,6 +3604,38 @@ header {
     }
 }
 
+.report-box{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 700px;
+    height: fit-content;
+    background-color: whitesmoke;
+    z-index: 101;
+}
+
+.report-box input{
+    position: relative;
+    width: 80%;
+    border: 1px solid var(--main-color);
+    margin: 0.5rem auto;
+    left: 50%;
+    transform: translate(-50%,0);
+}
+
+@media(max-width: 425px){
+    .report-box{
+        width: 350px;
+    }
+}
+
+@media(max-width: 350px){
+    .report-box{
+        width: 300px;
+    }
+}
+
 .error {
     width: fit-content;
     margin: 100px auto;
