--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -150,11 +150,7 @@ textarea {
 .markdown pre {
     margin: 1em 0 1em 0;
     padding: 0.5em;
-    background: #f6f8fa;
     overflow-x: scroll;
-    color: black;
-    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-    font-size: 1em;
 }
 
 .markdown ul {
@@ -184,18 +180,11 @@ textarea {
 .markdown code {
     padding: .2em .4em;
     margin: 0;
-    background-color: rgba(27, 31, 35, .05);
-    border-radius: 3px;
 }
 
 .markdown pre > code {
     padding: 0;
     margin: 0;
-    font-size: 100%;
-    word-break: normal;
-    white-space: pre;
-    background: transparent;
-    border: 0;
 }
 
 .markdown blockquote {
@@ -2149,7 +2138,7 @@ header {
         font-size: 8px;
     }
 
-    .number {
+    .activity-detail .number {
         font-size: 36px;
     }
 
@@ -2159,7 +2148,7 @@ header {
 }
 
 @media (max-width: 768px) {
-    .number {
+    .activity-detail .number {
         font-size: 24px;
     }
 }
