--- a/src/static/public/styles/prism.css
+++ b/src/static/public/styles/prism.css
@@ -6,8 +6,9 @@ https://prismjs.com/download.html#themes=prism-tomorrow&languages=markup+css+cli
  * @author Rose Pritchard
  */
 
+.markdown
 code[class*="language-"],
-pre[class*="language-"] {
+pre {
 	color: #ccc;
 	background: none;
 	font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
@@ -31,24 +32,28 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+.markdown
+pre {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
 }
 
+.markdown
 :not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+pre {
 	background: #2d2d2d;
 }
 
 /* Inline code */
+.markdown
 :not(pre) > code[class*="language-"] {
 	padding: .1em;
 	border-radius: .3em;
 	white-space: normal;
 }
 
+.markdown
 .token.comment,
 .token.block-comment,
 .token.prolog,
@@ -57,10 +62,12 @@ pre[class*="language-"] {
 	color: #999;
 }
 
+.markdown
 .token.punctuation {
 	color: #ccc;
 }
 
+.markdown
 .token.tag,
 .token.attr-name,
 .token.namespace,
@@ -68,16 +75,19 @@ pre[class*="language-"] {
 	color: #e2777a;
 }
 
+.markdown
 .token.function-name {
 	color: #6196cc;
 }
 
+.markdown
 .token.boolean,
 .token.number,
 .token.function {
 	color: #f08d49;
 }
 
+.markdown
 .token.property,
 .token.class-name,
 .token.constant,
@@ -85,6 +95,7 @@ pre[class*="language-"] {
 	color: #f8c555;
 }
 
+.markdown
 .token.selector,
 .token.important,
 .token.atrule,
@@ -93,6 +104,7 @@ pre[class*="language-"] {
 	color: #cc99cd;
 }
 
+.markdown
 .token.string,
 .token.char,
 .token.attr-value,
@@ -101,33 +113,40 @@ pre[class*="language-"] {
 	color: #7ec699;
 }
 
+.markdown
 .token.operator,
 .token.entity,
 .token.url {
 	color: #67cdcc;
 }
 
+.markdown
 .token.important,
 .token.bold {
 	font-weight: bold;
 }
+.markdown
 .token.italic {
 	font-style: italic;
 }
 
+.markdown
 .token.entity {
 	cursor: help;
 }
 
+.markdown
 .token.inserted {
 	color: green;
 }
 
+.markdown
 pre[data-line] {
 	position: relative;
 	padding: 1em 0 1em 3em;
 }
 
+.markdown
 .line-highlight {
 	position: absolute;
 	left: 0;
@@ -144,6 +163,7 @@ pre[data-line] {
 	white-space: pre;
 }
 
+.markdown
 	.line-highlight:before,
 	.line-highlight[data-end]:after {
 		content: attr(data-start);
@@ -162,28 +182,33 @@ pre[data-line] {
 		box-shadow: 0 1px white;
 	}
 
+	.markdown
 	.line-highlight[data-end]:after {
 		content: attr(data-end);
 		top: auto;
 		bottom: .4em;
 	}
 
+.markdown
 .line-numbers .line-highlight:before,
 .line-numbers .line-highlight:after {
 	content: none;
 }
 
-pre[class*="language-"].line-numbers {
+.markdown
+pre.line-numbers {
 	position: relative;
 	padding-left: 3.8em;
 	counter-reset: linenumber;
 }
 
-pre[class*="language-"].line-numbers > code {
+.markdown
+pre.line-numbers > code {
 	position: relative;
 	white-space: inherit;
 }
 
+.markdown
 .line-numbers .line-numbers-rows {
 	position: absolute;
 	pointer-events: none;
@@ -201,12 +226,14 @@ pre[class*="language-"].line-numbers > code {
 
 }
 
+.markdown
 	.line-numbers-rows > span {
 		pointer-events: none;
 		display: block;
 		counter-increment: linenumber;
 	}
 
+	.markdown
 		.line-numbers-rows > span:before {
 			content: counter(linenumber);
 			color: #999;
@@ -215,6 +242,7 @@ pre[class*="language-"].line-numbers > code {
 			text-align: right;
 		}
 
+		.markdown
 .command-line-prompt {
 	border-right: 1px solid #999;
 	display: block;
@@ -230,6 +258,7 @@ pre[class*="language-"].line-numbers > code {
 	user-select: none;
 }
 
+.markdown
 .command-line-prompt > span:before {
 	color: #999;
 	content: ' ';
@@ -237,22 +266,27 @@ pre[class*="language-"].line-numbers > code {
 	padding-right: 0.8em;
 }
 
+.markdown
 .command-line-prompt > span[data-user]:before {
 	content: "[" attr(data-user) "@" attr(data-host) "] $";
 }
 
+.markdown
 .command-line-prompt > span[data-user="root"]:before {
 	content: "[" attr(data-user) "@" attr(data-host) "] #";
 }
 
+.markdown
 .command-line-prompt > span[data-prompt]:before {
 	content: attr(data-prompt);
 }
 
+.markdown
 div.code-toolbar {
 	position: relative;
 }
 
+.markdown
 div.code-toolbar > .toolbar {
 	position: absolute;
 	top: .3em;
@@ -261,28 +295,32 @@ div.code-toolbar > .toolbar {
 	opacity: 0;
 }
 
+.markdown
 div.code-toolbar:hover > .toolbar {
 	opacity: 1;
 }
 
 /* Separate line b/c rules are thrown out if selector is invalid.
    IE11 and old Edge versions don't support :focus-within. */
+.markdown
 div.code-toolbar:focus-within > .toolbar {
 	opacity: 1;
 }
 
+.markdown
 div.code-toolbar > .toolbar .toolbar-item {
 	display: inline-block;
 }
 
+.markdown
 div.code-toolbar > .toolbar a {
 	cursor: pointer;
 }
 
+.markdown
 div.code-toolbar > .toolbar button {
 	background: none;
 	border: 0;
-	color: inherit;
 	font: inherit;
 	line-height: normal;
 	overflow: visible;
@@ -292,6 +330,7 @@ div.code-toolbar > .toolbar button {
 	-ms-user-select: none;
 }
 
+.markdown
 div.code-toolbar > .toolbar a,
 div.code-toolbar > .toolbar button,
 div.code-toolbar > .toolbar span {
@@ -304,13 +343,13 @@ div.code-toolbar > .toolbar span {
 	border-radius: .5em;
 }
 
+.markdown
 div.code-toolbar > .toolbar a:hover,
 div.code-toolbar > .toolbar a:focus,
 div.code-toolbar > .toolbar button:hover,
 div.code-toolbar > .toolbar button:focus,
 div.code-toolbar > .toolbar span:hover,
 div.code-toolbar > .toolbar span:focus {
-	color: inherit;
 	text-decoration: none;
 }
 
