--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -84,6 +84,9 @@ textarea {
 .markdown {
     font-family: var(--secondary-font);
     word-wrap: break-word;
+    color: rgba(0, 0, 0, 0.84);
+    font-size: 18px;
+    line-height: 28px;
 }
 
 .markdown dd {
@@ -141,7 +144,7 @@ textarea {
 }
 
 .markdown p {
-    margin: 0 0 1em 0;
+    margin: 1em 0 1em 0;
 }
 
 .markdown pre {
@@ -156,6 +159,22 @@ textarea {
 
 .markdown ul {
     margin: 1em 0 1em 0;
+}
+
+.markdown li > p {
+    margin-top: 16px;
+}
+
+.markdown a {
+    background-image: url('data:image/svg+xml;utf8,<svg preserveAspectRatio="none" viewBox="0 0 1 1" xmlns="http://www.w3.org/2000/svg"><line x1="0" y1="0" x2="1" y2="1" stroke="rgba(0, 0, 0, 0.84)" /></svg>');
+    background-position: 0 calc(1em + 1px);
+    background-size: 1px 1px;
+    background-repeat: repeat-x;
+    color: rgba(0, 0, 0, 0.84) !important;
+}
+
+.markdown li + li {
+    margin-top: .25em;
 }
 
 .markdown img {
@@ -190,12 +209,16 @@ textarea {
     word-break: break-word;
 }
 
-.markdown-body blockquote>:first-child {
+.markdown blockquote > :first-child {
     margin-top: 0;
 }
 
-.markdown-body blockquote>:last-child {
+.markdown blockquote > :last-child {
     margin-bottom: 0;
+}
+
+.markdown a {
+    color: var(--main-color-lay);
 }
 
 
@@ -551,7 +574,7 @@ header {
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
 }
@@ -570,7 +593,7 @@ header {
     left: 0;
     height: 56px;
     /*box-shadow: 0 1px 0 var(--main-color);*/
-    box-shadow: 0 0px 1px rgba(50, 50, 50, 1);
+    box-shadow: 0 0 1px rgba(50, 50, 50, 1);
 }
 
 .navigation {
@@ -707,7 +730,7 @@ header {
     background-color: var(--main-color-lay);
     background-blend-mode: normal;
     border: 5px solid var(--sec-color-lay);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     top: 100px;
 }
 
@@ -1905,7 +1928,7 @@ header {
     background-color: white;
     background-blend-mode: normal;
     border: 5px solid var(--sec-color-lay);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .user-name {
@@ -3500,6 +3523,12 @@ header {
     }
 }
 
+@media (min-width: 1024px) and (max-width: 1366px) {
+    .blog-container {
+        width: 80%;
+    }
+}
+
 @media (max-width: 768px) {
     .side-left {
         display: none;
@@ -3603,34 +3632,34 @@ header {
     }
 }
 
-.report-box{
+.report-box {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 700px;
     height: fit-content;
     background-color: whitesmoke;
     z-index: 101;
 }
 
-.report-box input{
+.report-box input {
     position: relative;
     width: 80%;
     border: 1px solid var(--main-color);
     margin: 0.5rem auto;
     left: 50%;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
 }
 
-@media(max-width: 425px){
-    .report-box{
+@media (max-width: 425px) {
+    .report-box {
         width: 350px;
     }
 }
 
-@media(max-width: 350px){
-    .report-box{
+@media (max-width: 350px) {
+    .report-box {
         width: 300px;
     }
 }
