markdown: syntax highlighting: Fix inline code and add corner radius
Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -180,6 +180,9 @@ textarea {
 .markdown code {
     padding: .2em .4em;
     margin: 0;
+    background-color: rgba(0,0,0,0.04);
+    font-size: 85%;
+    border-radius: 4px;
 }
 
 .markdown pre > code {
